Getting packets from .Board

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,7 @@ lib_deps =
     https://github.com/bblanchon/ArduinoJson.git#6.x
 		RF24
     RF24Network
+
+monitor_speed = 115200
+monitor_port = COM7
+upload_port = COM7
