Handling missed packets count from board. Lcd not wokring intermittently.

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,8 @@ board = nodemcu-32s
 framework = arduino
 
 lib_deps = 
-  arduino-fsm@2.2.0
+  ; arduino-fsm@2.2.0
+  https://github.com/skelstar/arduino-fsm.git 
   https://github.com/lewisxhe/Button2.git
   https://github.com/skelstar/VESC_Comms.git
   https://github.com/skelstar/Esk8.Board.VescComms.git#master
