using buildflags in platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[platformio]
+default_envs = esp32dev.debug
+
+[env]
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
@@ -32,5 +35,27 @@ lib_deps =
   https://github.com/skelstar/NRF24L01.Library.git
 
 monitor_speed = 115200
-monitor_port = COM15
-upload_port = COM15
+monitor_port = COM13
+upload_port = COM13
+
+[env:esp32dev.debug]
+build_flags = 
+  -D USE_TEST_VALUES
+  ; -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
+  -D DEBUG_BOARD_PRINT_STATE_NAME     
+  ; -D TRIGGER_DEBUG_ENABLED 
+  -D PACKET_RECV_DEBUG_ENABLED   
+  ; -D DEBUG_PRINT_STATE_NAME_ENABLED   
+
+  ; -D DEBUG_TRIGGER_ENABLED
+  ; -D DEBUG_THROTTLE_ENABLED
+  ; -D DEBUG_PRINT_STATE_NAME_ENABLED
+  ; -D USING_BUTTONS
+
+[env:esp32dev.release]
+build_flags = 
+  ; -D USE_TEST_VALUES
+  ; -D DEBUG_TRIGGER_ENABLED
+  ; -D DEBUG_THROTTLE_ENABLED
+  ; -D DEBUG_PRINT_STATE_NAME_ENABLED
+  ; -D USING_BUTTONS
