Reporting battery level through throttle to board. Addded deadman button.

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,8 +25,8 @@ lib_deps =
   https://github.com/skelstar/NRF24L01.Library.git
 
 monitor_speed = 115200
-monitor_port = COM13
-upload_port = COM13
+monitor_port = COM15
+upload_port = COM15
 
 [env:esp32dev.debug]
 build_flags = 
@@ -34,7 +34,7 @@ build_flags =
   ; -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
   -D DEBUG_BOARD_PRINT_STATE_NAME     
   ; -D TRIGGER_DEBUG_ENABLED 
-  -D PACKET_RECV_DEBUG_ENABLED   
+  ; -D PACKET_RECV_DEBUG_ENABLED   
   ; -D DEBUG_PRINT_STATE_NAME_ENABLED   
 
 [env:esp32dev.release]
