Added trigger_fsm. Handling not accelerating when deadman re-enabled. So cool.

--- a/platformio.ini
+++ b/platformio.ini
@@ -32,10 +32,11 @@ upload_port = COM15
 build_flags = 
   -D USE_TEST_VALUES
   ; -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
-  -D DEBUG_BOARD_PRINT_STATE_NAME     
+  ; -D DEBUG_BOARD_PRINT_STATE_NAME     
   ; -D TRIGGER_DEBUG_ENABLED 
   ; -D PACKET_RECV_DEBUG_ENABLED   
   ; -D DEBUG_PRINT_STATE_NAME_ENABLED   
+  ; -D DEBUG_PRINT_TRIGGER_STATE
 
 [env:esp32dev.release]
 build_flags = 
