--- a/platformio.ini
+++ b/platformio.ini
@@ -1,10 +1,15 @@
 [platformio]
-default_envs = esp32dev.debug
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
 
 [env]
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
+
+monitor_speed = 115200
+; monitor_port = COM15
+upload_port = COM15
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
@@ -24,13 +29,10 @@ lib_deps =
   https://github.com/nRF24/RF24Network.git
   https://github.com/skelstar/NRF24L01.Library.git
 
-monitor_speed = 115200
-monitor_port = COM15
-upload_port = COM15
-
 [env:esp32dev.debug]
 build_flags = 
   -D USE_TEST_VALUES
+  -D DEBUG_BUILD
   ; -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
   ; -D DEBUG_BOARD_PRINT_STATE_NAME     
   ; -D TRIGGER_DEBUG_ENABLED 
@@ -40,6 +42,7 @@ build_flags =
 
 [env:esp32dev.release]
 build_flags = 
+  -D RELEASE_BUILD
   ; -D USE_TEST_VALUES
   ; -D DEBUG_TRIGGER_ENABLED
   ; -D DEBUG_THROTTLE_ENABLED
