--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-; monitor_port = COM15
+monitor_port = COM15
 upload_port = COM15
 
 lib_deps = 
@@ -33,6 +33,7 @@ lib_deps =
 build_flags = 
   -D USE_TEST_VALUES
   -D DEBUG_BUILD
+  -D FSM_TRIGGER_DEBUG_ENABLED
   ; -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
   ; -D DEBUG_BOARD_PRINT_STATE_NAME     
   ; -D TRIGGER_DEBUG_ENABLED 
@@ -47,4 +48,5 @@ build_flags =
   ; -D DEBUG_TRIGGER_ENABLED
   ; -D DEBUG_THROTTLE_ENABLED
   ; -D DEBUG_PRINT_STATE_NAME_ENABLED
+  -D PACKET_RECV_DEBUG_ENABLED   
   ; -D USING_BUTTONS
