Moved comms stuff into Core0 and other stuff out.

--- a/platformio.ini
+++ b/platformio.ini
@@ -31,9 +31,10 @@ lib_deps =
 
 [env:esp32dev.debug]
 build_flags = 
-  -D USE_TEST_VALUES
   -D DEBUG_BUILD
+  -D USE_TEST_VALUES
   -D FSM_TRIGGER_DEBUG_ENABLED
+  ; -D PRINT_TRIGGER_FSM_EVENT
   ; -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
   ; -D DEBUG_BOARD_PRINT_STATE_NAME     
   ; -D TRIGGER_DEBUG_ENABLED 
@@ -47,6 +48,8 @@ build_flags =
   ; -D USE_TEST_VALUES
   ; -D DEBUG_TRIGGER_ENABLED
   ; -D DEBUG_THROTTLE_ENABLED
-  ; -D DEBUG_PRINT_STATE_NAME_ENABLED
-  -D PACKET_RECV_DEBUG_ENABLED   
+  -D PRINT_TRIGGER_FSM_EVENT
+  ; -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
+  -D DEBUG_PRINT_STATE_NAME_ENABLED
+  ; -D PACKET_RECV_DEBUG_ENABLED   
   ; -D USING_BUTTONS
