Tidied up. Rode and didn't nitoce board resets but they happened. Weird.

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,6 +34,7 @@ build_flags =
   -D DEBUG_BUILD
   -D USE_TEST_VALUES
   -D FSM_TRIGGER_DEBUG_ENABLED
+  ; -D USE_DEADMAN_SWITCH
   ; -D PRINT_TRIGGER_FSM_EVENT
   ; -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
   ; -D DEBUG_BOARD_PRINT_STATE_NAME     
@@ -48,6 +49,7 @@ build_flags =
   ; -D USE_TEST_VALUES
   ; -D DEBUG_TRIGGER_ENABLED
   ; -D DEBUG_THROTTLE_ENABLED
+  ; -D USE_DEADMAN_SWITCH
   -D PRINT_TRIGGER_FSM_EVENT
   ; -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
   -D DEBUG_PRINT_STATE_NAME_ENABLED
