Made chnages to NRF24L01Library (poitners to structs on send). These are changes for this.

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,6 @@ lib_deps =
   https://github.com/skelstar/arduino-fsm.git 
   https://github.com/skelstar/VESC_Comms.git
   https://github.com/skelstar/Esk8.Board.VescComms.git#master
-  https://github.com/skelstar/IEsk8Device.git
   https://github.com/skelstar/Arduino-Debugging.git
 
   https://github.com/nRF24/RF24Network.git
@@ -53,5 +52,5 @@ build_flags =
   -D PRINT_TRIGGER_FSM_EVENT
   ; -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
   -D DEBUG_PRINT_STATE_NAME_ENABLED
-  ; -D PACKET_RECV_DEBUG_ENABLED   
+  -D PACKET_RECV_DEBUG_ENABLED   
   ; -D USING_BUTTONS
