--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+default_envs = esp32dev.debug
+; default_envs = esp32dev.release
 
 [env]
 platform = espressif32
@@ -13,7 +13,6 @@ upload_port = COM11
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
-  https://github.com/arkhipenko/TaskScheduler.git#b36cc81
   https://github.com/bblanchon/ArduinoJson.git#6.x
   https://github.com/pfeerick/elapsedMillis.git
   https://github.com/Fattoresaimon/ArduinoDuPPaLib.git
@@ -26,7 +25,7 @@ lib_deps =
   https://github.com/skelstar/Arduino-Debugging.git
 
   https://github.com/nRF24/RF24Network.git
-  https://github.com/skelstar/NRF24L01.Library.git
+  https://github.com/skelstar/NRF24L01.Library.git#master
 
 [env:esp32dev.debug]
 build_flags = 
