--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-default_envs = esp32dev.debug
-; default_envs = esp32dev.release
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
 
 [env]
 platform = espressif32
@@ -8,8 +8,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM11
-upload_port = COM11
+monitor_port = COM15
+upload_port = COM15
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
@@ -37,7 +37,8 @@ build_flags =
   ; -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
   ; -D DEBUG_BOARD_PRINT_STATE_NAME     
   ; -D TRIGGER_DEBUG_ENABLED 
-  ; -D PACKET_RECV_DEBUG_ENABLED   
+  -D PACKET_RECV_DEBUG_ENABLED   
+  ; -D PRINT_METRICS
   ; -D DEBUG_PRINT_STATE_NAME_ENABLED   
   ; -D DEBUG_PRINT_TRIGGER_STATE
 
@@ -48,8 +49,9 @@ build_flags =
   ; -D DEBUG_TRIGGER_ENABLED
   ; -D DEBUG_THROTTLE_ENABLED
   ; -D USE_DEADMAN_SWITCH
-  -D PRINT_TRIGGER_FSM_EVENT
-  ; -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
-  -D DEBUG_PRINT_STATE_NAME_ENABLED
-  -D PACKET_RECV_DEBUG_ENABLED   
+  ; -D PRINT_TRIGGER_FSM_EVENT
+  -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
+  ; -D DEBUG_PRINT_STATE_NAME_ENABLED
+  ; -D PACKET_RECV_DEBUG_ENABLED   
+  -D PRINT_METRICS
   ; -D USING_BUTTONS
