--- a/platformio.ini
+++ b/platformio.ini
@@ -50,8 +50,8 @@ build_flags =
   ; -D DEBUG_THROTTLE_ENABLED
   ; -D USE_DEADMAN_SWITCH
   ; -D PRINT_TRIGGER_FSM_EVENT
-  -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
+  ; -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
   ; -D DEBUG_PRINT_STATE_NAME_ENABLED
   ; -D PACKET_RECV_DEBUG_ENABLED   
-  -D PRINT_METRICS
+  ; -D PRINT_METRICS
   ; -D USING_BUTTONS
