Tried vTaskSuspendAll but screen still not working in moving mode

--- a/platformio.ini
+++ b/platformio.ini
@@ -52,6 +52,6 @@ build_flags =
   ; -D PRINT_TRIGGER_FSM_EVENT
   ; -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
   ; -D DEBUG_PRINT_STATE_NAME_ENABLED
-  -D PACKET_RECV_DEBUG_ENABLED   
+  ; -D PACKET_RECV_DEBUG_ENABLED   
   ; -D PRINT_METRICS
   ; -D USING_BUTTONS
