--- a/platformio.ini
+++ b/platformio.ini
@@ -31,11 +31,11 @@ lib_deps =
 build_flags = 
   -D DEBUG_BUILD
   -D USE_TEST_VALUES
-  -D FSM_TRIGGER_DEBUG_ENABLED
+  -D PRINT_FSM_EVENT
   ; -D USE_DEADMAN_SWITCH
   ; -D PRINT_TRIGGER_FSM_EVENT
-  ; -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
-  ; -D DEBUG_BOARD_PRINT_STATE_NAME     
+  ; -D PRINT_BOARD_FSM_EVENT  
+  ; -D PRINT_BOARD_FSM_STATE_NAME     
   ; -D TRIGGER_DEBUG_ENABLED 
   -D PACKET_RECV_DEBUG_ENABLED   
   ; -D PRINT_METRICS
@@ -50,7 +50,8 @@ build_flags =
   ; -D DEBUG_THROTTLE_ENABLED
   ; -D USE_DEADMAN_SWITCH
   ; -D PRINT_TRIGGER_FSM_EVENT
-  ; -D BOARD_FSM_TRIGGER_DEBUG_ENABLED   
+  ; -D PRINT_BOARD_FSM_STATE_NAME     
+  ; -D PRINT_BOARD_FSM_EVENT  
   ; -D DEBUG_PRINT_STATE_NAME_ENABLED
   ; -D PACKET_RECV_DEBUG_ENABLED   
   ; -D PRINT_METRICS
