--- a/platformio.ini
+++ b/platformio.ini
@@ -41,6 +41,7 @@ build_flags =
   ; -D PRINT_METRICS
   ; -D DEBUG_PRINT_STATE_NAME_ENABLED   
   ; -D DEBUG_PRINT_TRIGGER_STATE
+  ; -D LOG_RETRIES
 
 [env:esp32dev.release]
 build_flags = 
@@ -56,3 +57,4 @@ build_flags =
   ; -D PACKET_RECV_DEBUG_ENABLED   
   ; -D PRINT_METRICS
   ; -D USING_BUTTONS
+  -D LOG_RETRIES
