Tried fixing comms issue. Commented out a lot of screen stuff to try fix SPI.

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,7 @@ framework = arduino
 monitor_speed = 115200
 monitor_port = COM11
 upload_port = COM11
+test_port = COM11
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
@@ -38,7 +39,6 @@ build_flags =
   ; -D PRINT_BOARD_FSM_STATE_NAME     
   ; -D TRIGGER_DEBUG_ENABLED 
   -D PACKET_RECV_DEBUG_ENABLED   
-  ; -D PRINT_METRICS
   ; -D DEBUG_PRINT_STATE_NAME_ENABLED   
   ; -D DEBUG_PRINT_TRIGGER_STATE
   ; -D PRINT_RETRIES_STATS
@@ -46,7 +46,7 @@ build_flags =
 [env:esp32dev.release]
 build_flags = 
   -D RELEASE_BUILD
-  ; -D USE_TEST_VALUES
+  -D USE_TEST_VALUES
   ; -D DEBUG_TRIGGER_ENABLED
   ; -D DEBUG_THROTTLE_ENABLED
   ; -D USE_DEADMAN_SWITCH
@@ -55,6 +55,5 @@ build_flags =
   ; -D PRINT_BOARD_FSM_EVENT  
   ; -D DEBUG_PRINT_STATE_NAME_ENABLED
   ; -D PACKET_RECV_DEBUG_ENABLED   
-  ; -D PRINT_METRICS
   ; -D USING_BUTTONS
   -D PRINT_RETRIES_STATS
