Added test.cpp that just tests comms, nothing else.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,7 @@
 [platformio]
 ; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+; default_envs = esp32dev.release
+default_envs = esp32dev.test
 
 [env]
 platform = espressif32
@@ -57,3 +58,22 @@ build_flags =
   ; -D PACKET_RECV_DEBUG_ENABLED   
   ; -D USING_BUTTONS
   -D PRINT_RETRIES_STATS
+
+[env:esp32dev.test]
+src_filter = ${dir.x}
+build_flags = 
+  -D RELEASE_BUILD
+  -D USE_TEST_VALUES
+  ; -D DEBUG_TRIGGER_ENABLED
+  ; -D DEBUG_THROTTLE_ENABLED
+  ; -D USE_DEADMAN_SWITCH
+  ; -D PRINT_TRIGGER_FSM_EVENT
+  ; -D PRINT_BOARD_FSM_STATE_NAME     
+  ; -D PRINT_BOARD_FSM_EVENT  
+  ; -D DEBUG_PRINT_STATE_NAME_ENABLED
+  ; -D PACKET_RECV_DEBUG_ENABLED   
+  ; -D USING_BUTTONS
+  -D PRINT_RETRIES_STATS
+
+[dir]
+x = +<test/>
