Wrote comms_and_display. Sends every 200ms and writes to display (one core)

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,8 @@
 [platformio]
 ; default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
-default_envs = esp32dev.test
+; default_envs = esp32dev.test_comms
+default_envs = esp32dev.test_comms_and_display
 
 [env]
 platform = espressif32
@@ -59,21 +60,12 @@ build_flags =
   ; -D USING_BUTTONS
   -D PRINT_RETRIES_STATS
 
-[env:esp32dev.test]
-src_filter = ${dir.x}
-build_flags = 
-  -D RELEASE_BUILD
-  -D USE_TEST_VALUES
-  ; -D DEBUG_TRIGGER_ENABLED
-  ; -D DEBUG_THROTTLE_ENABLED
-  ; -D USE_DEADMAN_SWITCH
-  ; -D PRINT_TRIGGER_FSM_EVENT
-  ; -D PRINT_BOARD_FSM_STATE_NAME     
-  ; -D PRINT_BOARD_FSM_EVENT  
-  ; -D DEBUG_PRINT_STATE_NAME_ENABLED
-  ; -D PACKET_RECV_DEBUG_ENABLED   
-  ; -D USING_BUTTONS
-  -D PRINT_RETRIES_STATS
+[env:esp32dev.test_comms]
+src_filter = ${dir.test_comms}
+
+[env:esp32dev.test_comms_and_display]
+src_filter = ${dir.test_comms_and_display}
 
 [dir]
-x = +<test/>
+test_comms = +<test/test_comms/>
+test_comms_and_display = +<test/comms_and_display/>
