--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,6 @@ lib_deps =
   https://github.com/lewisxhe/Button2.git
   https://github.com/bblanchon/ArduinoJson.git#6.x
   https://github.com/pfeerick/elapsedMillis.git
-  https://github.com/Fattoresaimon/ArduinoDuPPaLib.git
 
   U8g2@2.27.0
 
@@ -29,6 +28,8 @@ lib_deps =
 
   https://github.com/nRF24/RF24Network.git
   https://github.com/skelstar/NRF24L01.Library.git#master
+
+;-------------------------------------------------------
 
 [env:esp32dev.debug]
 build_flags = 
@@ -44,6 +45,7 @@ build_flags =
   ; -D DEBUG_PRINT_STATE_NAME_ENABLED   
   ; -D DEBUG_PRINT_TRIGGER_STATE
   ; -D PRINT_RETRIES_STATS
+;-------------------------------------------------------
 
 [env:esp32dev.release]
 build_flags = 
@@ -59,13 +61,29 @@ build_flags =
   ; -D PACKET_RECV_DEBUG_ENABLED   
   ; -D USING_BUTTONS
   -D PRINT_RETRIES_STATS
+;-------------------------------------------------------
 
 [env:esp32dev.test_comms]
 src_filter = ${dir.test_comms}
+;-------------------------------------------------------
 
 [env:esp32dev.test_comms_and_display]
 src_filter = ${dir.test_comms_and_display}
 
+lib_deps = 
+  https://github.com/lewisxhe/Button2.git
+  https://github.com/pfeerick/elapsedMillis.git
+
+  https://github.com/skelstar/arduino-fsm.git 
+  https://github.com/skelstar/VESC_Comms.git
+  https://github.com/skelstar/Esk8.Board.VescComms.git#master
+  https://github.com/skelstar/Arduino-Debugging.git
+  U8g2@2.27.0
+
+  https://github.com/nRF24/RF24Network.git
+  https://github.com/skelstar/NRF24L01.Library.git#master
+
+;-------------------------------------------------------
 [dir]
 test_comms = +<test/test_comms/>
 test_comms_and_display = +<test/comms_and_display/>
