--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
 ; default_envs = esp32dev.debug
-; default_envs = esp32dev.release
+default_envs = esp32dev.release
 ; default_envs = esp32dev.test_comms
-default_envs = esp32dev.test_comms_and_display
+; default_envs = esp32dev.test_comms_and_display
 
 [env]
 platform = espressif32
@@ -10,9 +10,9 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM11
-upload_port = COM11
-test_port = COM11
+monitor_port = COM15
+upload_port = COM15
+test_port = COM15
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
@@ -32,6 +32,7 @@ lib_deps =
 ;-------------------------------------------------------
 
 [env:esp32dev.debug]
+src_filter = ${dir.main}
 build_flags = 
   -D DEBUG_BUILD
   -D USE_TEST_VALUES
@@ -40,7 +41,7 @@ build_flags =
   ; -D PRINT_TRIGGER_FSM_EVENT
   ; -D PRINT_BOARD_FSM_EVENT  
   ; -D PRINT_BOARD_FSM_STATE_NAME     
-  ; -D TRIGGER_DEBUG_ENABLED 
+  ; -D PRINT_TRIGGER_VALUE 
   -D PACKET_RECV_DEBUG_ENABLED   
   ; -D DEBUG_PRINT_STATE_NAME_ENABLED   
   ; -D DEBUG_PRINT_TRIGGER_STATE
@@ -48,6 +49,7 @@ build_flags =
 ;-------------------------------------------------------
 
 [env:esp32dev.release]
+src_filter = ${dir.main}
 build_flags = 
   -D RELEASE_BUILD
   -D USE_TEST_VALUES
@@ -60,6 +62,7 @@ build_flags =
   ; -D DEBUG_PRINT_STATE_NAME_ENABLED
   ; -D PACKET_RECV_DEBUG_ENABLED   
   ; -D USING_BUTTONS
+  -D PRINT_TRIGGER_VALUE 
   -D PRINT_RETRIES_STATS
 ;-------------------------------------------------------
 
@@ -85,5 +88,6 @@ lib_deps =
 
 ;-------------------------------------------------------
 [dir]
+main = +<main/>
 test_comms = +<test/test_comms/>
 test_comms_and_display = +<test/comms_and_display/>
