Referencing NRF24L01Lib on branch. Added comms test (ping pong). Found board was dodgy.

--- a/platformio.ini
+++ b/platformio.ini
@@ -2,7 +2,8 @@
 ; default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.comms_only
-default_envs = esp32dev.comms_and_display
+; default_envs = esp32dev.comms_and_display
+default_envs = esp32dev.comms_ping_pong
 
 [env]
 platform = espressif32
@@ -27,7 +28,7 @@ lib_deps =
   https://github.com/skelstar/Arduino-Debugging.git
 
   https://github.com/nRF24/RF24Network.git
-  https://github.com/skelstar/NRF24L01.Library.git#master
+  https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
 
 ;-------------------------------------------------------
 
@@ -85,7 +86,24 @@ lib_deps =
   U8g2@2.27.0
 
   https://github.com/nRF24/RF24Network.git
-  https://github.com/skelstar/NRF24L01.Library.git#master
+  https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
+
+;-------------------------------------------------------
+[env:esp32dev.comms_ping_pong]
+
+src_filter = ${dir.comms_ping_pong}
+
+build_flags = 
+
+lib_deps = 
+  https://github.com/pfeerick/elapsedMillis.git
+  
+  https://github.com/skelstar/VESC_Comms.git
+  https://github.com/skelstar/Esk8.Board.VescComms.git#master
+  https://github.com/skelstar/Arduino-Debugging.git
+
+  https://github.com/nRF24/RF24Network.git
+  https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
 
 
 ;-------------------------------------------------------
@@ -93,3 +111,4 @@ lib_deps =
 main = +<main/> -<comms_only/> -<comms_and_display/>
 comms_only = +<comms_only/>
 comms_and_display = +<comms_and_display/>
+comms_ping_pong = +<comms_ping_pong/>
