sending REQUEST and getting RESPONSE. fsm FTW!

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,9 +1,9 @@
 [platformio]
 ; default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
-; default_envs = esp32dev.comms_only
 ; default_envs = esp32dev.comms_and_display
-default_envs = esp32dev.comms_ping_pong
+; default_envs = esp32dev.comms_ping_pong
+default_envs = esp32dev.comms_with_fsm_2
 
 [env]
 platform = espressif32
@@ -11,9 +11,9 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM11
-upload_port = COM11
-test_port = COM11
+monitor_port = COM15
+upload_port = COM15
+; test_port = COM15
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
@@ -101,9 +101,28 @@ lib_deps =
   https://github.com/nRF24/RF24Network.git
   https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
 
+;-------------------------------------------------------
+[env:esp32dev.comms_with_fsm_2]
+
+src_filter = ${dir.comms_with_fsm_2}
+
+build_flags = 
+
+lib_deps = 
+  https://github.com/pfeerick/elapsedMillis.git
+  
+  https://github.com/skelstar/VESC_Comms.git
+  https://github.com/skelstar/Esk8.Board.VescComms.git#metadata
+  https://github.com/skelstar/Arduino-Debugging.git
+
+  https://github.com/nRF24/RF24Network.git
+  https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
+  https://github.com/skelstar/arduino-fsm.git 
+
 
 ;-------------------------------------------------------
 [dir]
 main = +<main/> -<comms_only/> -<comms_and_display/>
 comms_and_display = +<comms_and_display/>
 comms_ping_pong = +<comms_ping_pong/>
+comms_with_fsm_2 = +<comms_with_fsm_2/>
