Not using fsm anymore. Messed with comms.

--- a/platformio.ini
+++ b/platformio.ini
@@ -107,6 +107,7 @@ lib_deps =
 src_filter = ${dir.comms_with_fsm_2}
 
 build_flags = 
+  -D PRINT_COMMS_FSM_STATE_NAME
 
 lib_deps = 
   https://github.com/pfeerick/elapsedMillis.git
