Added cruise control feature

--- a/platformio.ini
+++ b/platformio.ini
@@ -108,10 +108,12 @@ src_filter = ${dir.comms_with_fsm_2}
 
 build_flags = 
   ; -D PRINT_THROTTLE
+  ; -D FEATURE_CRUISE_CONTROL
 
 lib_deps = 
   https://github.com/pfeerick/elapsedMillis.git
-  
+  https://github.com/lewisxhe/Button2.git
+
   https://github.com/skelstar/VESC_Comms.git
   https://github.com/skelstar/Esk8.Board.VescComms.git#metadata
   https://github.com/skelstar/Arduino-Debugging.git
