Was trying to get t-display and nrf wokring on the SPI bus but they won't. First one to init the bus works, but other one doesn't.

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM15
-upload_port = COM15
+monitor_port = COM3
+upload_port = COM3
 ; test_port = COM15
 
 lib_deps = 
@@ -20,7 +20,8 @@ lib_deps =
   https://github.com/pfeerick/elapsedMillis.git
   https://github.com/MattFryer/Smoothed.git
 
-  U8g2@2.27.0
+  ; U8g2@2.27.0
+  https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 
   https://github.com/skelstar/arduino-fsm.git 
   https://github.com/skelstar/VESC_Comms.git
@@ -35,7 +36,7 @@ lib_deps =
 [env:esp32dev.debug]
 src_filter = ${dir.main}
 build_flags = 
-  -D PRINT_THROTTLE
+  ; -D PRINT_THROTTLE
   -D FEATURE_CRUISE_CONTROL
   -D SERIAL__DEBUG
 ;-------------------------------------------------------
