created tft_nrf.cpp... turns just tft on for now

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
-default_envs = esp32dev.debug
+; default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
-; default_envs = esp32dev.comms_and_display
 ; default_envs = esp32dev.comms_ping_pong
+default_envs = esp32dev.tft_nrf
 
 [env]
 platform = espressif32
@@ -10,9 +10,9 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM3
-upload_port = COM3
-; test_port = COM15
+monitor_port = COM17
+upload_port = COM17
+test_port = COM17
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
@@ -49,23 +49,9 @@ build_flags =
   ; -D SERIAL__DEBUG
 ;-------------------------------------------------------
 
-[env:esp32dev.comms_and_display]
-src_filter = ${dir.comms_and_display}
-
-lib_deps = 
-  https://github.com/lewisxhe/Button2.git
-  https://github.com/pfeerick/elapsedMillis.git
-  https://github.com/MattFryer/Smoothed.git
-  
-  https://github.com/skelstar/arduino-fsm.git 
-  https://github.com/skelstar/VESC_Comms.git
-  https://github.com/skelstar/Esk8.Board.VescComms.git#metadata
-  https://github.com/skelstar/Arduino-Debugging.git
-  U8g2@2.27.0
-
-  https://github.com/nRF24/RF24Network.git
-  https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
-
+[env:esp32dev.tft_nrf]
+src_filter = ${dir.tft_nrf}
+build_flags = 
 ;-------------------------------------------------------
 [env:esp32dev.comms_ping_pong]
 
@@ -86,6 +72,6 @@ lib_deps =
 ;-------------------------------------------------------
 
 [dir]
-main = +<main/> -<comms_only/> -<comms_and_display/>
-comms_and_display = +<comms_and_display/>
+main = +<main/> -<comms_only/>
+tft_nrf = +<tft_nrf/>
 comms_ping_pong = +<comms_ping_pong/>
