core1 part of deadman...

--- a/platformio.ini
+++ b/platformio.ini
@@ -39,7 +39,7 @@ build_flags =
   -D FEATURE_CRUISE_CONTROL
   -D SERIAL__DEBUG
   ; -D FEATURE_PUSH_TO_ENABLE
-
+  ; -D USING_DEADMAN
 ;-------------------------------------------------------
 
 [env:esp32dev.release]
@@ -49,6 +49,7 @@ build_flags =
   ; -D FEATURE_CRUISE_CONTROL
   ; -D SERIAL__DEBUG
   ; -D FEATURE_PUSH_TO_ENABLE
+  ; -D USING_DEADMAN
 ;-------------------------------------------------------
 
 [env:esp32dev.comms_and_display]
