--- a/platformio.ini
+++ b/platformio.ini
@@ -35,25 +35,23 @@ lib_deps =
 [env:esp32dev.debug]
 src_filter = ${dir.main}
 build_flags = 
-  -D PRINT_THROTTLE
-  -D FEATURE_CRUISE_CONTROL
-  -D SERIAL__DEBUG
-<<<<<<< HEAD
-  ; -D FEATURE_PUSH_TO_ENABLE
+  ; -D PRINT_THROTTLE
   ; -D USING_DEADMAN
-=======
+  -D FEATURE_CRUISE_CONTROL
+  ; -D FEATURE_PUSH_TO_ENABLE
+  -D SERIAL__DEBUG
   -D USING_DEADMAN
   ; -D PRINT_COMMS_DEBUG
->>>>>>> 36edb36... Tried getting deadman working. make_throttle_safe is frustrating! :)
 ;-------------------------------------------------------
 
 [env:esp32dev.release]
 src_filter = ${dir.main}
 build_flags = 
   ; -D PRINT_THROTTLE
+  ; -D USING_DEADMAN
   ; -D FEATURE_CRUISE_CONTROL
-  ; -D SERIAL__DEBUG
   ; -D FEATURE_PUSH_TO_ENABLE
+  ; -D SERIAL__DEBUG
   ; -D USING_DEADMAN
 ;-------------------------------------------------------
 
