moved make_throttle_safe into TriggerLib. Refactored test, but two aren't passing.

--- a/platformio.ini
+++ b/platformio.ini
@@ -35,10 +35,11 @@ lib_deps =
 [env:esp32dev.debug]
 src_filter = ${dir.main}
 build_flags = 
-  ; -D PRINT_THROTTLE
+  -D PRINT_THROTTLE
   ; -D USING_DEADMAN
   -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
+  ; -D FEATURE_CRUISE_CONTROL
   -D SERIAL__DEBUG
   -D USING_DEADMAN
   ; -D PRINT_COMMS_DEBUG
