--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-default_envs = esp32dev.debug
-; default_envs = esp32dev.release
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
 ; default_envs = esp32dev.comms_and_display
 ; default_envs = esp32dev.comms_ping_pong
 
@@ -13,6 +13,8 @@ monitor_speed = 115200
 monitor_port = COM15
 upload_port = COM15
 ; test_port = COM15
+
+test_filter = deadman
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
@@ -39,6 +41,7 @@ build_flags =
   ; -D USING_DEADMAN
   -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
+  -D USING_DEADMAN
   ; -D FEATURE_CRUISE_CONTROL
   -D SERIAL__DEBUG
   -D USING_DEADMAN
@@ -49,7 +52,7 @@ build_flags =
 src_filter = ${dir.main}
 build_flags = 
   ; -D PRINT_THROTTLE
-  ; -D USING_DEADMAN
+  -D USING_DEADMAN
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
   ; -D SERIAL__DEBUG
