--- a/platformio.ini
+++ b/platformio.ini
@@ -38,6 +38,8 @@ build_flags =
   -D PRINT_THROTTLE
   -D FEATURE_CRUISE_CONTROL
   -D SERIAL__DEBUG
+  ; -D FEATURE_PUSH_TO_ENABLE
+
 ;-------------------------------------------------------
 
 [env:esp32dev.release]
@@ -46,6 +48,7 @@ build_flags =
   ; -D PRINT_THROTTLE
   ; -D FEATURE_CRUISE_CONTROL
   ; -D SERIAL__DEBUG
+  ; -D FEATURE_PUSH_TO_ENABLE
 ;-------------------------------------------------------
 
 [env:esp32dev.comms_and_display]
