Updating display with queue event (xDisplayChangedQueue). Showing icon that represents the trigger state: G, I, W.

--- a/platformio.ini
+++ b/platformio.ini
@@ -38,13 +38,13 @@ lib_deps =
 src_filter = ${dir.main}
 build_flags = 
   -D PRINT_THROTTLE
-  ; -D USING_DEADMAN
-  -D FEATURE_CRUISE_CONTROL
-  ; -D FEATURE_PUSH_TO_ENABLE
-  -D USING_DEADMAN
+  ; -D FEATURE_DEADMAN
   ; -D FEATURE_CRUISE_CONTROL
-  -D SERIAL__DEBUG
-  -D USING_DEADMAN
+  ; -D FEATURE_PUSH_TO_ENABLE
+  -D FEATURE_DEADMAN
+  ; -D FEATURE_CRUISE_CONTROL
+  -D SERIAL_DEBUG
+  -D FEATURE_DEADMAN
   ; -D PRINT_COMMS_DEBUG
 ;-------------------------------------------------------
 
@@ -52,11 +52,11 @@ build_flags =
 src_filter = ${dir.main}
 build_flags = 
   ; -D PRINT_THROTTLE
-  -D USING_DEADMAN
+  -D FEATURE_DEADMAN
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
-  ; -D SERIAL__DEBUG
-  ; -D USING_DEADMAN
+  ; -D SERIAL_DEBUG
+  ; -D FEATURE_DEADMAN
 ;-------------------------------------------------------
 
 [env:esp32dev.comms_and_display]
