Got opt1,2,3 menu sytem wokring. Haven't done select yet. Screens.h reinstated.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+default_envs = esp32dev.debug
+; default_envs = esp32dev.release
 ; default_envs = esp32dev.comms_and_display
 ; default_envs = esp32dev.comms_ping_pong
 
@@ -10,8 +10,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM15
-upload_port = COM15
+monitor_port = COM11
+upload_port = COM11
 ; test_port = COM15
 
 test_filter = deadman
@@ -37,15 +37,12 @@ lib_deps =
 [env:esp32dev.debug]
 src_filter = ${dir.main}
 build_flags = 
-  -D PRINT_THROTTLE
+  ; -D PRINT_THROTTLE
   ; -D FEATURE_DEADMAN
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
-  -D FEATURE_DEADMAN
-  ; -D FEATURE_CRUISE_CONTROL
-  -D SERIAL_DEBUG
-  -D FEATURE_DEADMAN
-  ; -D PRINT_COMMS_DEBUG
+  -D DEBUG_SERIAL
+  -D PRINT_COMMS_DEBUG
 ;-------------------------------------------------------
 
 [env:esp32dev.release]
@@ -55,7 +52,7 @@ build_flags =
   -D FEATURE_DEADMAN
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
-  ; -D SERIAL_DEBUG
+  ; -D DEBUG_SERIAL
   ; -D FEATURE_DEADMAN
 ;-------------------------------------------------------
 
