--- a/platformio.ini
+++ b/platformio.ini
@@ -37,22 +37,24 @@ lib_deps =
 [env:esp32dev.debug]
 src_filter = ${dir.main}
 build_flags = 
+  -D DEBUG_SERIAL
+  -D PRINT_COMMS_DEBUG
   ; -D PRINT_THROTTLE
+  -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_DEADMAN
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
-  -D DEBUG_SERIAL
-  -D PRINT_COMMS_DEBUG
 ;-------------------------------------------------------
 
 [env:esp32dev.release]
 src_filter = ${dir.main}
 build_flags = 
+  ; -D DEBUG_SERIAL
   ; -D PRINT_THROTTLE
-  -D FEATURE_DEADMAN
+  ; -D PRINT_DISP_STATE_EVENT
+  ; -D FEATURE_DEADMAN
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
-  ; -D DEBUG_SERIAL
   ; -D FEATURE_DEADMAN
 ;-------------------------------------------------------
 
