--- a/platformio.ini
+++ b/platformio.ini
@@ -41,7 +41,7 @@ build_flags =
   -D PRINT_COMMS_DEBUG
   ; -D PRINT_THROTTLE
   -D PRINT_DISP_STATE_EVENT
-  ; -D FEATURE_DEADMAN
+  -D FEATURE_DEADMAN
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
 ;-------------------------------------------------------
