--- a/platformio.ini
+++ b/platformio.ini
@@ -38,7 +38,7 @@ lib_deps =
 src_filter = ${dir.main}
 build_flags = 
   -D DEBUG_SERIAL
-  -D PRINT_COMMS_DEBUG
+  ; -D PRINT_COMMS_DEBUG
   ; -D PRINT_THROTTLE
   -D PRINT_DISP_STATE_EVENT
   -D FEATURE_DEADMAN
@@ -52,10 +52,9 @@ build_flags =
   ; -D DEBUG_SERIAL
   ; -D PRINT_THROTTLE
   ; -D PRINT_DISP_STATE_EVENT
-  ; -D FEATURE_DEADMAN
+  -D FEATURE_DEADMAN
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
-  ; -D FEATURE_DEADMAN
 ;-------------------------------------------------------
 
 [env:esp32dev.comms_and_display]
