Added rtos_play.cpp to investigate RTOS behaviour.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,7 @@
 [platformio]
-default_envs = esp32dev.debug
-; default_envs = esp32dev.release
-; default_envs = esp32dev.comms_and_display
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
+; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.comms_ping_pong
 
 [env]
@@ -12,9 +12,9 @@ framework = arduino
 monitor_speed = 115200
 monitor_port = COM11
 upload_port = COM11
-; test_port = COM15
+test_port = COM11
 
-test_filter = deadman
+test_filter = rtos
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
@@ -90,6 +90,15 @@ lib_deps =
 
   https://github.com/nRF24/RF24Network.git
   https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
+;-------------------------------------------------------
+[env:esp32dev.rtos_play]
+
+src_filter = ${dir.rtos_play}
+
+build_flags = 
+
+lib_deps = 
+  https://github.com/pfeerick/elapsedMillis.git
 
 ;-------------------------------------------------------
 
@@ -97,3 +106,4 @@ lib_deps =
 main = +<main/> -<comms_only/> -<comms_and_display/>
 comms_and_display = +<comms_and_display/>
 comms_ping_pong = +<comms_ping_pong/>
+rtos_play = +<rtos_play/>
