--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM11
-upload_port = COM11
+monitor_port = COM15
+upload_port = COM15
 test_port = COM11
 
 test_filter = rtos
@@ -39,8 +39,11 @@ src_filter = ${dir.main}
 build_flags = 
   -D DEBUG_SERIAL
   ; -D PRINT_COMMS_DEBUG
+  ; -D PRINT_COMMS_STATE
+  ; -D PRINT_COMMS_STATE_EVENT
   ; -D PRINT_THROTTLE
-  -D PRINT_DISP_STATE_EVENT
+  -D PRINT_DISP_STATE
+  ; -D PRINT_DISP_STATE_EVENT
   -D FEATURE_DEADMAN
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
@@ -50,6 +53,7 @@ build_flags =
 src_filter = ${dir.main}
 build_flags = 
   ; -D DEBUG_SERIAL
+  ; -D PRINT_COMMS_STATE
   ; -D PRINT_THROTTLE
   ; -D PRINT_DISP_STATE_EVENT
   -D FEATURE_DEADMAN
