Added #ifndef UNIT_TEST

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,7 @@
 [platformio]
 ; default_envs = esp32dev.debug
-default_envs = esp32dev.release
-; default_envs = esp32dev.rtos_play
+; default_envs = esp32dev.release
+default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.comms_ping_pong
 
 [env]
@@ -14,7 +14,7 @@ monitor_port = COM15
 upload_port = COM15
 test_port = COM11
 
-test_filter = rtos
+test_filter = throttle
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
