Refactored some of the files... tried moving each feature into it's own file.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,7 +1,7 @@
 [platformio]
 ; default_envs = esp32dev.debug
-; default_envs = esp32dev.release
-default_envs = esp32dev.rtos_play
+default_envs = esp32dev.release
+; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.comms_ping_pong
 
 [env]
@@ -10,8 +10,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM15
-upload_port = COM15
+monitor_port = COM11
+upload_port = COM11
 test_port = COM11
 
 test_filter = throttle
