print_build_status()

--- a/platformio.ini
+++ b/platformio.ini
@@ -37,6 +37,7 @@ lib_deps =
 [env:esp32dev.debug]
 src_filter = ${dir.main}
 build_flags = 
+  -D DEBUG_BUILD
   -D DEBUG_SERIAL
   ; -D PRINT_COMMS_DEBUG
   ; -D PRINT_COMMS_STATE
@@ -52,6 +53,7 @@ build_flags =
 [env:esp32dev.release]
 src_filter = ${dir.main}
 build_flags = 
+  -D RELEASE_BUILD
   ; -D DEBUG_SERIAL
   ; -D PRINT_COMMS_STATE
   ; -D PRINT_THROTTLE
