--- a/platformio.ini
+++ b/platformio.ini
@@ -63,24 +63,6 @@ build_flags =
   ; -D FEATURE_PUSH_TO_ENABLE
 ;-------------------------------------------------------
 
-[env:esp32dev.comms_and_display]
-src_filter = ${dir.comms_and_display}
-
-lib_deps = 
-  https://github.com/lewisxhe/Button2.git
-  https://github.com/pfeerick/elapsedMillis.git
-  https://github.com/MattFryer/Smoothed.git
-  
-  https://github.com/skelstar/arduino-fsm.git 
-  https://github.com/skelstar/VESC_Comms.git
-  https://github.com/skelstar/Esk8.Board.VescComms.git#metadata
-  https://github.com/skelstar/Arduino-Debugging.git
-  U8g2@2.27.0
-
-  https://github.com/nRF24/RF24Network.git
-  https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
-
-;-------------------------------------------------------
 [env:esp32dev.comms_ping_pong]
 
 src_filter = ${dir.comms_ping_pong}
@@ -97,6 +79,7 @@ lib_deps =
   https://github.com/nRF24/RF24Network.git
   https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
 ;-------------------------------------------------------
+
 [env:esp32dev.rtos_play]
 
 src_filter = ${dir.rtos_play}
@@ -109,7 +92,6 @@ lib_deps =
 ;-------------------------------------------------------
 
 [dir]
-main = +<main/> -<comms_only/> -<comms_and_display/>
-comms_and_display = +<comms_and_display/>
+main = +<main/> -<comms_only/>
 comms_ping_pong = +<comms_ping_pong/>
 rtos_play = +<rtos_play/>
