Got nrflite working on HSPI and tft is working too!

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM3
-upload_port = COM3
+monitor_port = COM17
+upload_port = COM17
 test_port = COM3
 
 lib_deps = 
@@ -21,18 +21,15 @@ lib_deps =
   https://github.com/MattFryer/Smoothed.git
 
   ; U8g2@2.27.0
-  ; https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
-  ; https://github.com/adafruit/Adafruit-GFX-Library.git
-  ; https://github.com/ananevilya/Arduino-ST7789-Library.git
-  https://github.com/adafruit/Adafruit-ST7735-Library.git
+  https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 
   https://github.com/skelstar/arduino-fsm.git 
   https://github.com/skelstar/VESC_Comms.git
-  https://github.com/skelstar/Esk8.Board.VescComms.git#metadata
+  https://github.com/skelstar/Esk8.Board.Data.git
   https://github.com/skelstar/Arduino-Debugging.git
 
-  https://github.com/nRF24/RF24Network.git
-  https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
+  ; https://github.com/nRF24/RF24Network.git
+  ; https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
 
 ;-------------------------------------------------------
 
@@ -54,7 +51,15 @@ build_flags =
 
 [env:esp32dev.tft_nrf]
 src_filter = ${dir.tft_nrf}
+lib_deps = 
+  https://github.com/lewisxhe/Button2.git
+  https://github.com/pfeerick/elapsedMillis.git
+  https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
+  https://github.com/skelstar/Arduino-Debugging.git
+  https://github.com/dparson55/NRFLite.git  
+  https://github.com/skelstar/Esk8.Board.Data.git
 build_flags = 
+  -D SERIAL__DEBUG
 ;-------------------------------------------------------
 [env:esp32dev.comms_ping_pong]
 
