--- a/platformio.ini
+++ b/platformio.ini
@@ -54,21 +54,25 @@ build_flags =
 
 [env:esp32dev.tft_nrf]
 src_filter = ${dir.tft_nrf}
+lib_deps = 
+  https://github.com/lewisxhe/Button2.git
+  https://github.com/pfeerick/elapsedMillis.git
+  https://github.com/skelstar/Esk8.Board.Data.git
+  https://github.com/skelstar/NRFLite.git
+  https://github.com/skelstar/Arduino-Debugging.git
+  https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
+
 build_flags = 
+  -D SERIAL__DEBUG
 ;-------------------------------------------------------
 [env:esp32dev.comms_ping_pong]
-
 src_filter = ${dir.comms_ping_pong}
-
 build_flags = 
-
 lib_deps = 
   https://github.com/pfeerick/elapsedMillis.git
-  
   https://github.com/skelstar/VESC_Comms.git
   https://github.com/skelstar/Esk8.Board.VescComms.git#metadata
   https://github.com/skelstar/Arduino-Debugging.git
-
   https://github.com/nRF24/RF24Network.git
   https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
 
