--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,9 @@
 [platformio]
 ; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.comms_ping_pong
+default_envs = esp32dev.nrf_tft_spi_sharing
 
 [env]
 platform = espressif32
@@ -31,7 +32,7 @@ lib_deps =
 
   https://github.com/nRF24/RF24Network.git
   https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
-
+  https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 ;-------------------------------------------------------
 
 [env:esp32dev.debug]
@@ -79,6 +80,23 @@ lib_deps =
   https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
 ;-------------------------------------------------------
 
+[env:esp32dev.nrf_tft_spi_sharing]
+
+src_filter = ${dir.nrf_tft_spi_sharing}
+
+build_flags = 
+
+lib_deps = 
+  https://github.com/pfeerick/elapsedMillis.git
+  
+  https://github.com/skelstar/Esk8.Board.VescComms.git#metadata
+  https://github.com/skelstar/Arduino-Debugging.git
+
+  https://github.com/nRF24/RF24Network.git
+  https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
+  https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
+;-------------------------------------------------------
+
 [env:esp32dev.rtos_play]
 
 src_filter = ${dir.rtos_play}
@@ -94,3 +112,4 @@ lib_deps =
 main = +<main/> -<comms_only/>
 comms_ping_pong = +<comms_ping_pong/>
 rtos_play = +<rtos_play/>
+rtos_play = +<nrf_tft_spi_sharing/>
