--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM15
-upload_port = COM15
+monitor_port = COM3
+upload_port = COM3
 test_port = COM11
 
 test_filter = throttle
@@ -73,7 +73,7 @@ build_flags =
 lib_deps = 
   https://github.com/pfeerick/elapsedMillis.git
   
-  https://github.com/skelstar/Esk8.Board.VescComms.git#metadata
+  https://github.com/skelstar/Esk8.Board.VescComms.git
   https://github.com/skelstar/Arduino-Debugging.git
 
   https://github.com/nRF24/RF24Network.git
@@ -89,7 +89,7 @@ build_flags =
 lib_deps = 
   https://github.com/pfeerick/elapsedMillis.git
   
-  https://github.com/skelstar/Esk8.Board.VescComms.git#metadata
+  https://github.com/skelstar/Esk8.Board.VescComms.git
   https://github.com/skelstar/Arduino-Debugging.git
 
   https://github.com/nRF24/RF24Network.git
@@ -112,4 +112,4 @@ lib_deps =
 main = +<main/> -<comms_only/>
 comms_ping_pong = +<comms_ping_pong/>
 rtos_play = +<rtos_play/>
-rtos_play = +<nrf_tft_spi_sharing/>
+nrf_tft_spi_sharing = +<nrf_tft_spi_sharing/>
