--- a/platformio.ini
+++ b/platformio.ini
@@ -1,9 +1,9 @@
 [platformio]
-; default_envs = esp32dev.debug
+default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.comms_ping_pong
-default_envs = esp32dev.nrf_tft_spi_sharing
+; default_envs = esp32dev.nrf_tft_spi_sharing
 
 [env]
 platform = espressif32
@@ -11,8 +11,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM3
-upload_port = COM3
+monitor_port = COM17
+upload_port = COM17
 test_port = COM11
 
 test_filter = throttle
@@ -23,13 +23,12 @@ lib_deps =
   https://github.com/pfeerick/elapsedMillis.git
   https://github.com/MattFryer/Smoothed.git
 
-  U8g2@2.27.0
-
   https://github.com/skelstar/arduino-fsm.git 
   https://github.com/skelstar/VESC_Comms.git
   https://github.com/skelstar/Esk8.Board.Data.git
   https://github.com/skelstar/Arduino-Debugging.git
 
+  https://github.com/greiman/DigitalIO.git
   https://github.com/nRF24/RF24Network.git
   https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
@@ -92,7 +91,6 @@ lib_deps =
   https://github.com/skelstar/Esk8.Board.VescComms.git
   https://github.com/skelstar/Arduino-Debugging.git
 
-  ; https://github.com/nRF24/RF24.git
   https://github.com/greiman/DigitalIO.git
   https://github.com/nRF24/RF24Network.git
   https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
