--- a/platformio.ini
+++ b/platformio.ini
@@ -39,15 +39,16 @@ src_filter = ${dir.main}
 build_flags = 
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
-  ; -D PRINT_COMMS_DEBUG
-  ; -D PRINT_COMMS_STATE
-  ; -D PRINT_COMMS_STATE_EVENT
+  -D PRINT_COMMS_DEBUG
+  -D PRINT_COMMS_STATE
+  -D PRINT_COMMS_STATE_EVENT
   ; -D PRINT_THROTTLE
   -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   -D FEATURE_DEADMAN
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
+  -D SEND_TO_BOARD_INTERVAL=1000
 ;-------------------------------------------------------
 
 [env:esp32dev.release]
