Added hall-effect trigger, but values not high enough.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
-default_envs = esp32dev.debug
+; default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
-; default_envs = esp32dev.comms_ping_pong
+default_envs = esp32dev.hall_effect_trigger
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
 [env]
@@ -64,20 +64,15 @@ build_flags =
   ; -D FEATURE_PUSH_TO_ENABLE
 ;-------------------------------------------------------
 
-[env:esp32dev.comms_ping_pong]
+[env:esp32dev.hall_effect_trigger]
 
-src_filter = ${dir.comms_ping_pong}
+src_filter = ${dir.hall_effect_trigger}
 
 build_flags = 
 
 lib_deps = 
   https://github.com/pfeerick/elapsedMillis.git
-  
-  https://github.com/skelstar/Esk8.Board.VescComms.git
   https://github.com/skelstar/Arduino-Debugging.git
-
-  https://github.com/nRF24/RF24Network.git
-  https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
 ;-------------------------------------------------------
 
 [env:esp32dev.nrf_tft_spi_sharing]
@@ -111,6 +106,6 @@ lib_deps =
 
 [dir]
 main = +<main/> -<comms_only/>
-comms_ping_pong = +<comms_ping_pong/>
+hall_effect_trigger = +<hall_effect_trigger/>
 rtos_play = +<rtos_play/>
 nrf_tft_spi_sharing = +<nrf_tft_spi_sharing/>
