Created HalleffectThrottleLib and using it in hall_effect_trigger.cpp.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "workbench.colorCustomizations": {
-    "editor.background": "#3b0909"
+    "editorGroupHeader.tabsBackground": "#fc5603"
   },
   "files.associations": {
     "*.tcc": "cpp",
