--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM17
-upload_port = COM17
+monitor_port = COM3
+upload_port = COM3
 test_port = COM11
 
 test_filter = throttle
@@ -43,9 +43,9 @@ build_flags =
   -D PRINT_COMMS_STATE
   -D PRINT_COMMS_STATE_EVENT
   ; -D PRINT_THROTTLE
-  -D PRINT_DISP_STATE
+  ; -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
-  -D FEATURE_DEADMAN
+  ; -D FEATURE_DEADMAN
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
   -D SEND_TO_BOARD_INTERVAL=1000
