--- a/platformio.ini
+++ b/platformio.ini
@@ -2,8 +2,8 @@
 ; default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
-default_envs = esp32dev.hall_effect_trigger
-; default_envs = esp32dev.nrf_tft_spi_sharing
+; default_envs = esp32dev.hall_effect_trigger
+default_envs = esp32dev.nrf_tft_spi_sharing
 
 [env]
 platform = espressif32
@@ -40,15 +40,16 @@ build_flags =
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
   -D PRINT_COMMS_DEBUG
-  -D PRINT_COMMS_STATE
+  ; -D PRINT_COMMS_STATE
   -D PRINT_COMMS_STATE_EVENT
   ; -D PRINT_THROTTLE
-  ; -D PRINT_DISP_STATE
-  ; -D PRINT_DISP_STATE_EVENT
-  ; -D FEATURE_DEADMAN
+  -D PRINT_DISP_STATE
+  -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
-  -D SEND_TO_BOARD_INTERVAL=1000
+  -D SEND_TO_BOARD_INTERVAL=200
+  -D READ_TRIGGER_PERIOD=200
+
 ;-------------------------------------------------------
 
 [env:esp32dev.release]
@@ -59,9 +60,10 @@ build_flags =
   ; -D PRINT_COMMS_STATE
   ; -D PRINT_THROTTLE
   ; -D PRINT_DISP_STATE_EVENT
-  -D FEATURE_DEADMAN
   ; -D FEATURE_CRUISE_CONTROL
-  ; -D FEATURE_PUSH_TO_ENABLE
+  -D FEATURE_PUSH_TO_ENABLE
+  -D SEND_TO_BOARD_INTERVAL=200
+  -D READ_TRIGGER_PERIOD=200
 ;-------------------------------------------------------
 
 [env:esp32dev.hall_effect_trigger]
