--- a/platformio.ini
+++ b/platformio.ini
@@ -2,8 +2,8 @@
 ; default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
-; default_envs = esp32dev.hall_effect_trigger
-default_envs = esp32dev.nrf_tft_spi_sharing
+default_envs = esp32dev.encoder_play
+; default_envs = esp32dev.nrf_tft_spi_sharing
 
 [env]
 platform = espressif32
@@ -11,8 +11,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM3
-upload_port = COM3
+monitor_port = COM8
+upload_port = COM8
 test_port = COM11
 
 test_filter = throttle
@@ -66,15 +66,16 @@ build_flags =
   -D READ_TRIGGER_PERIOD=200
 ;-------------------------------------------------------
 
-[env:esp32dev.hall_effect_trigger]
+[env:esp32dev.encoder_play]
 
-src_filter = ${dir.hall_effect_trigger}
+src_filter = ${dir.encoder_play}
 
 build_flags = 
 
 lib_deps = 
   https://github.com/pfeerick/elapsedMillis.git
   https://github.com/skelstar/Arduino-Debugging.git
+  https://github.com/Fattoresaimon/ArduinoDuPPaLib.git
 ;-------------------------------------------------------
 
 [env:esp32dev.nrf_tft_spi_sharing]
@@ -108,6 +109,6 @@ lib_deps =
 
 [dir]
 main = +<main/> -<comms_only/>
-hall_effect_trigger = +<hall_effect_trigger/>
+encoder_play = +<encoder_play/>
 rtos_play = +<rtos_play/>
 nrf_tft_spi_sharing = +<nrf_tft_spi_sharing/>
