--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
-; default_envs = esp32dev.debug
+default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
-default_envs = esp32dev.encoder_play
+; default_envs = esp32dev.encoder_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
 [env]
@@ -11,8 +11,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM8
-upload_port = COM8
+monitor_port = COM3
+upload_port = COM3
 test_port = COM11
 
 test_filter = throttle
@@ -31,6 +31,8 @@ lib_deps =
   https://github.com/greiman/DigitalIO.git
   https://github.com/nRF24/RF24Network.git
   https://github.com/skelstar/NRF24L01.Library.git#feature/adding-test
+  
+  https://github.com/Fattoresaimon/ArduinoDuPPaLib.git
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 ;-------------------------------------------------------
 
