Cleaning up disp_ev stuff.

--- a/platformio.ini
+++ b/platformio.ini
@@ -51,6 +51,8 @@ build_flags =
   ; -D FEATURE_PUSH_TO_ENABLE
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
+  -D ENCODER_NUM_STEPS_BRAKE=8
+  -D ENCODER_NUM_STEPS_ACCEL=8
 
 ;-------------------------------------------------------
 
@@ -66,6 +68,8 @@ build_flags =
   -D FEATURE_PUSH_TO_ENABLE
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
+  -D ENCODER_NUM_STEPS_BRAKE=8
+  -D ENCODER_NUM_STEPS_ACCEL=8
 ;-------------------------------------------------------
 
 [env:esp32dev.encoder_play]
