Trying to sort out disp not going to "connected". Might be related to timing.

--- a/platformio.ini
+++ b/platformio.ini
@@ -42,7 +42,7 @@ build_flags =
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
   -D PRINT_COMMS_DEBUG
-  ; -D PRINT_COMMS_STATE
+  -D PRINT_COMMS_STATE
   -D PRINT_COMMS_STATE_EVENT
   ; -D PRINT_THROTTLE
   -D PRINT_DISP_STATE
