Create commsState task. Changed commsState from fsm to logic.

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM3
-upload_port = COM3
+monitor_port = COM17
+upload_port = COM17
 test_port = COM11
 
 test_filter = throttle
@@ -42,7 +42,7 @@ build_flags =
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
   -D PRINT_RETRIES
-  ; -D PRINT_COMMS_STATE
+  -D PRINT_COMMS_STATE
   ; -D PRINT_COMMS_STATE_EVENT
   ; -D PRINT_THROTTLE
   -D PRINT_DISP_STATE
