Think I solved the missing packets/retries issue.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,9 +1,9 @@
 [platformio]
-default_envs = esp32dev.debug
+; default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.encoder_play
-; default_envs = esp32dev.nrf_tft_spi_sharing
+default_envs = esp32dev.nrf_tft_spi_sharing
 
 [env]
 platform = espressif32
@@ -11,8 +11,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM3
-upload_port = COM3
+monitor_port = COM17
+upload_port = COM17
 test_port = COM11
 
 test_filter = throttle
