--- a/platformio.ini
+++ b/platformio.ini
@@ -1,9 +1,9 @@
 [platformio]
-; default_envs = esp32dev.debug
+default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.encoder_play
-default_envs = esp32dev.nrf_tft_spi_sharing
+; default_envs = esp32dev.nrf_tft_spi_sharing
 
 [env]
 platform = espressif32
