Tried checking for reply in time but not working.

--- a/platformio.ini
+++ b/platformio.ini
@@ -41,7 +41,7 @@ src_filter = ${dir.main}
 build_flags = 
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
-  -D PRINT_RETRIES
+  ; -D PRINT_RETRIES
   -D PRINT_COMMS_STATE
   ; -D PRINT_COMMS_STATE_EVENT
   ; -D PRINT_THROTTLE
