Better "connected" management.

--- a/platformio.ini
+++ b/platformio.ini
@@ -41,11 +41,11 @@ src_filter = ${dir.main}
 build_flags = 
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
-  ; -D PRINT_RETRIES
+  -D PRINT_RETRIES
   -D PRINT_COMMS_STATE
   ; -D PRINT_COMMS_STATE_EVENT
-  ; -D PRINT_THROTTLE
-  -D PRINT_DISP_STATE
+  -D PRINT_THROTTLE
+  ; -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
