--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,10 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM17
-upload_port = COM17
+monitor_port = COM3
+upload_port = COM3
+; monitor_port = COM17
+; upload_port = COM17
 test_port = COM11
 
 test_filter = throttle
