--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-default_envs = esp32dev.debug
-; default_envs = esp32dev.release
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.encoder_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
@@ -47,7 +47,7 @@ build_flags =
   -D PRINT_COMMS_STATE
   ; -D PRINT_COMMS_STATE_EVENT
   -D PRINT_THROTTLE
-  ; -D PRINT_DISP_STATE
+  -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
