Added FSR_play. Working with multimap.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
 ; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
-; default_envs = esp32dev.encoder_play
+default_envs = esp32dev.FSR_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
 [env]
@@ -11,8 +11,10 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM3
-upload_port = COM3
+; monitor_port = COM3
+; upload_port = COM3
+monitor_port = COM14
+upload_port = COM14
 ; monitor_port = COM17
 ; upload_port = COM17
 test_port = COM11
@@ -74,16 +76,15 @@ build_flags =
   -D ENCODER_NUM_STEPS_ACCEL=8
 ;-------------------------------------------------------
 
-[env:esp32dev.encoder_play]
+[env:esp32dev.FSR_play]
 
-src_filter = ${dir.encoder_play}
+src_filter = ${dir.FSR_play}
 
 build_flags = 
 
 lib_deps = 
   https://github.com/pfeerick/elapsedMillis.git
   https://github.com/skelstar/Arduino-Debugging.git
-  https://github.com/Fattoresaimon/ArduinoDuPPaLib.git
 ;-------------------------------------------------------
 
 [env:esp32dev.nrf_tft_spi_sharing]
@@ -117,6 +118,6 @@ lib_deps =
 
 [dir]
 main = +<main/> -<comms_only/>
-encoder_play = +<encoder_play/>
+FSR_play = +<FSR_play/>
 rtos_play = +<rtos_play/>
 nrf_tft_spi_sharing = +<nrf_tft_spi_sharing/>
