Redid library. Deadman funcitonality. Remapping accel/brake curves.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
-; default_envs = esp32dev.debug
+default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
-default_envs = esp32dev.FSR_play
+; default_envs = esp32dev.FSR_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
 [env]
