--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
-default_envs = esp32dev.debug
+; default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
-; default_envs = esp32dev.FSR_play
+default_envs = esp32dev.FSR_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
 [env]
@@ -55,8 +55,6 @@ build_flags =
   ; -D FEATURE_PUSH_TO_ENABLE
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
-  -D ENCODER_NUM_STEPS_BRAKE=8
-  -D ENCODER_NUM_STEPS_ACCEL=8
 
 ;-------------------------------------------------------
 
@@ -72,8 +70,6 @@ build_flags =
   -D FEATURE_PUSH_TO_ENABLE
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
-  -D ENCODER_NUM_STEPS_BRAKE=8
-  -D ENCODER_NUM_STEPS_ACCEL=8
 ;-------------------------------------------------------
 
 [env:esp32dev.FSR_play]
@@ -83,8 +79,11 @@ src_filter = ${dir.FSR_play}
 build_flags = 
 
 lib_deps = 
+  https://github.com/lewisxhe/Button2.git
   https://github.com/pfeerick/elapsedMillis.git
   https://github.com/skelstar/Arduino-Debugging.git
+  https://github.com/MattFryer/Smoothed.git
+
 ;-------------------------------------------------------
 
 [env:esp32dev.nrf_tft_spi_sharing]
