USE_DEADMAN flag

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,10 +11,10 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-; monitor_port = COM3
-; upload_port = COM3
-monitor_port = COM14
-upload_port = COM14
+monitor_port = COM34
+upload_port = COM34
+; monitor_port = COM14
+; upload_port = COM14
 ; monitor_port = COM17
 ; upload_port = COM17
 test_port = COM11
@@ -109,6 +109,7 @@ lib_deps =
 src_filter = ${dir.rtos_play}
 
 build_flags = 
+  ; -D USE_DEADMAN
 
 lib_deps = 
   https://github.com/pfeerick/elapsedMillis.git
