--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
-; default_envs = esp32dev.debug
+default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
-default_envs = esp32dev.FSR_play
+; default_envs = esp32dev.FSR_play
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
 [env]
@@ -11,8 +11,8 @@ board = nodemcu-32s
 framework = arduino
 
 monitor_speed = 115200
-monitor_port = COM34
-upload_port = COM34
+monitor_port = COM3
+upload_port = COM3
 ; monitor_port = COM14
 ; upload_port = COM14
 ; monitor_port = COM17
@@ -38,6 +38,7 @@ lib_deps =
   
   https://github.com/Fattoresaimon/ArduinoDuPPaLib.git
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
+
 ;-------------------------------------------------------
 
 [env:esp32dev.debug]
@@ -45,11 +46,11 @@ src_filter = ${dir.main}
 build_flags = 
   -D DEBUG_BUILD
   -D DEBUG_SERIAL
-  -D PRINT_RETRIES
-  -D PRINT_COMMS_STATE
+  ; -D PRINT_RETRIES
+  ; -D PRINT_COMMS_STATE
   ; -D PRINT_COMMS_STATE_EVENT
-  -D PRINT_THROTTLE
-  -D PRINT_DISP_STATE
+  ; -D PRINT_THROTTLE
+  ; -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
