Passing in min/max raw values for FSR.

--- a/platformio.ini
+++ b/platformio.ini
@@ -49,13 +49,15 @@ build_flags =
   ; -D PRINT_RETRIES
   ; -D PRINT_COMMS_STATE
   ; -D PRINT_COMMS_STATE_EVENT
-  ; -D PRINT_THROTTLE
+  -D PRINT_THROTTLE
   ; -D PRINT_DISP_STATE
   ; -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
+  -D FSR_MAX_RAW=3000
+  -D FSR_MIN_RAW=500
 
 ;-------------------------------------------------------
 
