--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,9 @@
 [platformio]
-default_envs = esp32dev.debug
+; default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
 ; default_envs = esp32dev.FSR_play
+default_envs = esp32dev.PixelFlasherDemo
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
 [env]
@@ -86,6 +87,17 @@ lib_deps =
   https://github.com/pfeerick/elapsedMillis.git
   https://github.com/skelstar/Arduino-Debugging.git
   https://github.com/MattFryer/Smoothed.git
+;-------------------------------------------------------
+
+[env:esp32dev.PixelFlasherDemo]
+
+src_filter = ${dir.PixelFlasherDemo}
+
+build_flags = 
+
+lib_deps = 
+  https://github.com/pfeerick/elapsedMillis.git
+  https://github.com/skelstar/Arduino-Debugging.git
 
 ;-------------------------------------------------------
 
@@ -122,5 +134,6 @@ lib_deps =
 [dir]
 main = +<main/> -<comms_only/>
 FSR_play = +<FSR_play/>
+PixelFlasherDemo = +<PixelFlasherDemo/>
 rtos_play = +<rtos_play/>
 nrf_tft_spi_sharing = +<nrf_tft_spi_sharing/>
