--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
-default_envs = esp32dev.debug
+; default_envs = esp32dev.debug
 ; default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
-; default_envs = esp32dev.FSR_play
+default_envs = esp32dev.FSR_play
 ; default_envs = esp32dev.PixelFlasherDemo
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
@@ -52,13 +52,13 @@ build_flags =
   ; -D PRINT_COMMS_STATE_EVENT
   -D PRINT_THROTTLE
   ; -D PRINT_DISP_STATE
-  ; -D PRINT_DISP_STATE_EVENT
+  -D PRINT_DISP_STATE_EVENT
   ; -D FEATURE_CRUISE_CONTROL
   ; -D FEATURE_PUSH_TO_ENABLE
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
-  -D FSR_MAX_RAW=3000
-  -D FSR_MIN_RAW=500
+  ; -D FSR_MAX_RAW=2000
+  ; -D FSR_MIN_RAW=500
 
 ;-------------------------------------------------------
 
@@ -74,13 +74,18 @@ build_flags =
   -D FEATURE_PUSH_TO_ENABLE
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
+  -D FSR_MAX_RAW=2000
+  -D FSR_MIN_RAW=500
 ;-------------------------------------------------------
+
 
 [env:esp32dev.FSR_play]
 
 src_filter = ${dir.FSR_play}
 
 build_flags = 
+  -D FSR_MAX_RAW=1500
+  -D FSR_MIN_RAW=500
 
 lib_deps = 
   https://github.com/lewisxhe/Button2.git
