--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 [platformio]
 ; default_envs = esp32dev.debug
-; default_envs = esp32dev.release
+default_envs = esp32dev.release
 ; default_envs = esp32dev.rtos_play
-default_envs = esp32dev.FSR_play
+; default_envs = esp32dev.FSR_play
 ; default_envs = esp32dev.PixelFlasherDemo
 ; default_envs = esp32dev.nrf_tft_spi_sharing
 
@@ -57,8 +57,8 @@ build_flags =
   ; -D FEATURE_PUSH_TO_ENABLE
   -D SEND_TO_BOARD_INTERVAL=200
   -D READ_TRIGGER_PERIOD=200
-  ; -D FSR_MAX_RAW=2000
-  ; -D FSR_MIN_RAW=500
+  -D FSR_MAX_RAW=2000
+  -D FSR_MIN_RAW=500
 
 ;-------------------------------------------------------
 
